ilex/tests/ui/eof/mixed_brackets.stderr
error: unexpected closing `)`
 --> eof/mixed_brackets.txt:1:8
  |
1 | [] () [) (] [(])
  |        ^ expected to be opened by `(`
  |
  = note: reported at: ilex/src/rt/emit2.rs:254:22

error: expected closing `)`, but found `]`
 --> eof/mixed_brackets.txt:1:11
  |
1 | [] () [) (] [(])
  |           ^ expected `)` here
  |          - help: previously opened here
  |
  = note: reported at: ilex/src/rt/lexer.rs:207:23

error: expected closing `)`, but found `]`
 --> eof/mixed_brackets.txt:1:15
  |
1 | [] () [) (] [(])
  |               ^ expected `)` here
  |              - help: previously opened here
  |
  = note: reported at: ilex/src/rt/lexer.rs:207:23

error: expected closing `)`, but found <eof>
 --> eof/mixed_brackets.txt:1:17
  |
1 | [] () [) (] [(]) 
  |                 ^ expected `)` here
  |          - help: previously opened here
  |
  = note: reported at: ilex/src/rt/lexer.rs:323:10

error: aborting due to 4 errors
